--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ###################
 ## CUSTOM
 ###################
-quarkus.application.environment=${ENV:local}
+quarkus.application.environment=${ENV:main}
 quarkus.application.title=${APP_TITLE:Quarkus Template}
 
 ###################
@@ -27,7 +27,7 @@ quarkus.log.console.json.additional-field."app_environment".value=${quarkus.appl
 ###################
 ## OPENTELEMETRY
 ###################
-quarkus.opentelemetry.enabled=true
+quarkus.opentelemetry.enabled=false
 %dev.quarkus.opentelemetry.enabled=false
 %test.quarkus.opentelemetry.enabled=false
 %openapi.quarkus.opentelemetry.enabled=false
@@ -41,20 +41,30 @@ quarkus.opentelemetry.tracer.exporter.otlp.headers=Authorization=Bearer eyJhbGci
 %docker.quarkus.opentelemetry.tracer.exporter.otlp.headers=Authorization=Bearer my-token
 #quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{3.}] (%t) %s%e%n
 
-####################
+#####################
 ## OPENAPI - SWAGGER
-####################
+#####################
 quarkus.smallrye-openapi.info-title=${quarkus.application.title} (${quarkus.application.environment}) ${service}
 %dev.quarkus.smallrye-openapi.info-title=${quarkus.application.title} (DEV)
 %test.quarkus.smallrye-openapi.info-title=${quarkus.application.title} (TEST)
 %docker.quarkus.smallrye-openapi.info-title=${quarkus.application.title} (DOCKER)
 quarkus.smallrye-openapi.info-description=${quarkus.application.title} description
 quarkus.smallrye-openapi.info-terms-of-service=https://www.pagopa.gov.it/
-# TODO modify project
-quarkus.smallrye-openapi.servers=\\$\{host\}/quarkus-template/api/v1 - APIM
+quarkus.smallrye-openapi.servers=\\$\{host\}/nodo-ts/collector-service/api/v1
 # Path for the Swagger endpoint and file
 quarkus.swagger-ui.path=/swagger
 quarkus.smallrye-openapi.path=/openapi.json
+
+####################
+## DATABASE
+####################
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = root
+quarkus.datasource.password = password
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost/nodo?currentSchema=nodo4_collector
+
+# drop and create the database at startup (use `update` to only update the schema)
+quarkus.hibernate-orm.database.generation=drop-and-create
 
 
 
